<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_main">

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_empty"
            android:layout_marginTop="@dimen/profile_margin_photo_top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/title_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_user_name"
            android:textSize="@dimen/profile_text_size_title_user_name"
            android:fontFamily="@font/roboto_medium"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/profile_margin_user_name_top"
            android:layout_marginEnd="@dimen/margin_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/user_photo"/>

        <TextView
            android:id="@+id/title_user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_user_email"
            android:textSize="@dimen/profile_text_size_main"
            android:layout_marginTop="@dimen/profile_margin_user_email_top"
            android:layout_marginEnd="@dimen/margin_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_user_name"
            app:layout_constraintEnd_toStartOf="@id/user_photo"/>

        <TextView
            android:id="@+id/title_interests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_interests_title"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/profile_margin_interests_title_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_user_email" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/list_interests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_margin_interests_list_top"
            app:singleLine="false"
            app:chipSpacingVertical="4dp"
            app:layout_constraintTop_toBottomOf="@id/title_interests"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/personal_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/profile_personal_data_title"
            android:layout_marginTop="@dimen/profile_margin_main_top"
            app:layout_constraintTop_toBottomOf="@id/list_interests"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/hint_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_name"
            android:textColor="@color/grey"
            android:textSize="@dimen/profile_text_size_hint_name"
            android:labelFor="@id/user_name"
            android:layout_marginTop="@dimen/profile_margin_edit_top"
            app:layout_constraintTop_toBottomOf="@id/personal_data"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/user_name"
            style="@style/ProfileEditItem"
            android:inputType="textPersonName"
            android:text="@string/profile_user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hint_name" />

        <EditText
            android:id="@+id/user_password"
            style="@style/ProfileEditItem"
            android:inputType="textPassword"
            android:text="@string/profile_user_password"
            android:layout_marginTop="@dimen/profile_margin_edit_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

        <EditText
            android:id="@+id/user_email"
            style="@style/ProfileEditItem"
            android:inputType="textEmailAddress"
            android:text="@string/profile_user_email"
            android:layout_marginTop="@dimen/profile_margin_edit_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_password" />

        <EditText
            android:id="@+id/user_phone"
            style="@style/ProfileEditItem"
            android:inputType="phone"
            android:hint="@string/hint_phone"
            android:layout_marginTop="@dimen/profile_margin_edit_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_email" />

        <TextView
            android:id="@+id/title_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/profile_margin_main_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_phone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_settings_notifications"
            style="@style/ProfileSettingsItem"
            android:text="@string/settings_notifications"
            app:layout_constraintTop_toBottomOf="@id/title_settings"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_settings_confident"
            style="@style/ProfileSettingsItem"
            android:text="@string/settings_confident"
            app:layout_constraintTop_toBottomOf="@id/btn_settings_notifications"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_settings_theme"
            style="@style/ProfileSettingsItem"
            android:text="@string/settings_theme"
            app:layout_constraintTop_toBottomOf="@id/btn_settings_confident"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_settings_lang"
            style="@style/ProfileSettingsItem"
            android:text="@string/settings_lang"
            app:layout_constraintTop_toBottomOf="@id/btn_settings_theme"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_settings_memory"
            style="@style/ProfileSettingsItem"
            android:text="@string/settings_memory"
            app:layout_constraintTop_toBottomOf="@id/btn_settings_lang"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/title_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_app_title"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/profile_margin_main_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_settings_memory" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_feedback_ask"
            style="@style/ProfileSettingsItem"
            android:text="@string/feedback_ask"
            app:layout_constraintTop_toBottomOf="@id/title_feedback"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_feedback_problem"
            style="@style/ProfileSettingsItem"
            android:text="@string/feedback_problem"
            app:layout_constraintTop_toBottomOf="@id/btn_feedback_ask"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exit"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_height_btn_exit"
            android:background="@drawable/bgr_profile_exit"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/profile_exit"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="@dimen/profile_text_size_btn_exit"
            android:layout_marginTop="@dimen/profile_margin_main_top"
            android:layout_marginBottom="@dimen/profile_margin_main_to_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_feedback_problem"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>