<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr_movie_details">

    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgr_poster"
        android:scaleType="centerCrop"
        android:src="@drawable/image_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:behavior_hideable="false"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/about_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bgr_card"
                android:paddingBottom="@dimen/movie_detail_margin_main_to_bottom">

                <TextView
                    android:id="@+id/movie_genre_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_main"
                    android:layout_marginTop="@dimen/movie_detail_margin_genre_to_top"
                    android:background="@drawable/bgr_genre"
                    tools:text="@string/movie_genre_action"
                    android:textSize="@dimen/movie_detail_text_size_genre"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/movie_detail_margin_data_start"
                    tools:text="@string/movie_data"
                    android:textSize="@dimen/movie_detail_text_size_data"
                    app:layout_constraintBottom_toBottomOf="@+id/movie_genre_name"
                    app:layout_constraintStart_toEndOf="@+id/movie_genre_name"
                    app:layout_constraintTop_toTopOf="@+id/movie_genre_name" />

                <TextView
                    android:id="@+id/movie_age_level"
                    android:layout_width="@dimen/movie_detail_size_age_ic"
                    android:layout_height="@dimen/movie_detail_size_age_ic"
                    android:layout_marginTop="@dimen/movie_detail_margin_age_ic_to_top"
                    android:layout_marginEnd="@dimen/margin_main"
                    android:background="@drawable/bgr_circle"
                    android:paddingVertical="@dimen/movie_detail_paddings_age_ic"
                    tools:text="@string/age_level_18_up"
                    android:textAlignment="center"
                    android:textSize="@dimen/movie_detail_text_size_age"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_main"
                    android:layout_marginTop="@dimen/movie_detail_margin_title_to_top"
                    android:fontFamily="@font/roboto_medium"
                    tools:text="@string/movie_title"
                    android:textStyle="bold"
                    android:textSize="@dimen/movie_detail_text_size_title_movie"
                    app:layout_constraintEnd_toStartOf="@+id/movie_age_level"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_data" />

                <com.oelrun.teta.utils.RatingView
                    android:id="@+id/movie_rating"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movie_detail_height_rating"
                    tools:rating="@integer/movie_rating_temp"
                    android:layout_marginStart="@dimen/margin_main"
                    android:layout_marginTop="@dimen/movie_detail_margin_rating_to_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />

                <TextView
                    android:id="@+id/movie_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_main"
                    android:layout_marginTop="@dimen/movie_detail_margin_description_to_rating"
                    tools:text="@string/movie_description"
                    android:textSize="@dimen/movie_detail_text_size_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_rating" />

                <TextView
                    android:id="@+id/actors_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_main"
                    android:layout_marginTop="@dimen/movie_detail_margin_actors_title_to_description"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/actors_title"
                    android:textSize="@dimen/movie_detail_text_size_actors_title"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_description" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cast_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    android:scrollbars="none"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_marginTop="@dimen/movie_detail_margin_actors_container_top"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/actors_title" />

                <TextView
                    android:id="@+id/error_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/movie_detail_error_message_cast"
                    android:layout_marginTop="@dimen/movie_detail_margin_actors_container_top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/actors_title"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>