<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="@drawable/brg_poster"
        android:scaleType="centerCrop"
        android:src="@drawable/image_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/button_nav_to_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bgr_card"
            android:scrollbars="none"
            app:behavior_hideable="false"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/about_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/margin_main_double">

                <TextView
                    android:id="@+id/movie_genre_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_main"
                    android:layout_marginTop="@dimen/margin_x4_big"
                    android:background="@drawable/bgr_genre"
                    android:text="@string/movie_genre_action"
                    android:textSize="@dimen/text_size_tiny"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_x4_middle"
                    android:text="@string/movie_data"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintBottom_toBottomOf="@+id/movie_genre_name"
                    app:layout_constraintStart_toEndOf="@+id/movie_genre_name"
                    app:layout_constraintTop_toTopOf="@+id/movie_genre_name" />

                <TextView
                    android:id="@+id/movie_age_level"
                    android:layout_width="@dimen/md_age_ic_width"
                    android:layout_height="@dimen/md_age_ic_width"
                    android:layout_marginTop="@dimen/margin_main_double"
                    android:layout_marginEnd="@dimen/margin_main"
                    android:background="@drawable/bgr_circle"
                    android:paddingVertical="@dimen/padding_10"
                    android:text="@string/age_level_18_up"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_middle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_main"
                    android:layout_marginTop="@dimen/margin_x4_middle"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/movie_title"
                    android:textSize="@dimen/text_size_large"
                    app:layout_constraintEnd_toStartOf="@+id/movie_age_level"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_data" />

                <com.oelrun.teta.RatingView
                    android:id="@+id/movie_rating"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_rating_height"
                    app:rating="@integer/movie_rating_temp"
                    android:layout_marginStart="@dimen/margin_main"
                    android:layout_marginTop="@dimen/margin_x4_tiny"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />

                <TextView
                    android:id="@+id/movie_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_main"
                    android:layout_marginTop="@dimen/margin_main"
                    android:text="@string/movie_description"
                    android:textSize="@dimen/text_size_middle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_rating" />

                <TextView
                    android:id="@+id/actors_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_main"
                    android:layout_marginTop="@dimen/margin_x4_large"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/actors_title"
                    android:textSize="@dimen/text_size_big"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_description" />

                <HorizontalScrollView
                    android:id="@+id/actors_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_x4_middle"
                    android:overScrollMode="never"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/actors_title">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/margin_main"
                            android:paddingEnd="@dimen/margin_main_small">

                            <ImageView
                                android:id="@+id/actor_photo_1"
                                android:layout_width="@dimen/md_actor_image_width"
                                android:layout_height="@dimen/md_actor_image_height"
                                android:scaleType="centerCrop"
                                android:src="@drawable/image_statham"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_x4_small"
                                android:text="@string/actor_statham"
                                android:textSize="@dimen/text_size_small"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/actor_photo_1" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/margin_main_small">

                            <ImageView
                                android:id="@+id/actor_photo_2"
                                android:layout_width="@dimen/md_actor_image_width"
                                android:layout_height="@dimen/md_actor_image_height"
                                android:scaleType="centerCrop"
                                android:src="@drawable/image_mccallany"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_x4_small"
                                android:text="@string/actor_mccallany"
                                android:textSize="@dimen/text_size_small"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/actor_photo_2" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/margin_main">

                            <ImageView
                                android:id="@+id/actor_photo_3"
                                android:layout_width="@dimen/md_actor_image_width"
                                android:layout_height="@dimen/md_actor_image_height"
                                android:scaleType="centerCrop"
                                android:src="@drawable/image_hartnett"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_x4_small"
                                android:text="@string/actor_hartnett"
                                android:textSize="@dimen/text_size_small"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/actor_photo_3" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                </HorizontalScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ImageView
        android:id="@+id/button_nav_to_home"
        android:layout_width="0dp"
        android:layout_height="@dimen/bottom_nav_view_height"
        android:background="@drawable/bgr_menu"
        android:scaleType="center"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_nav_to_profile"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/button_nav_to_profile"
        android:layout_width="0dp"
        android:layout_height="@dimen/bottom_nav_view_height"
        android:background="@color/white"
        android:scaleType="center"
        android:src="@drawable/ic_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_nav_to_home" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--
    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemBackground="@drawable/bgr_menu"
            app:itemIconSize="16dp"
            app:itemIconTint="@color/black"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:menu="@menu/bottom_navigation_menu" />
            -->
    <!--
    <ListView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:isScrollContainer="true"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/actors_title"
                    tools:listitem="@layout/list_item_actor" />
    -->